Fix nav link text wrapping with white-space nowrap

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@
   padding: 1rem 1.5rem;
   min-width: 12%;
   text-align: center;
+  white-space: nowrap;
 }
 
 .pixel-nav .navbar-nav .nav-item {
